Mejoras ejemplos Tema 18: Colecciones